[gd_scene load_steps=4 format=3 uid="uid://himl3pefm1tc"]

[ext_resource type="Script" uid="uid://45whm0iu3px8" path="res://autoload/scr_options.gd" id="1_kip0u"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="2_yatxs"]
[ext_resource type="PackedScene" uid="uid://dxea13a1qe1mf" path="res://scenes/gui/scn_keybinds.tscn" id="3_n1vjm"]

[node name="OPT" type="Node"]
process_mode = 3
script = ExtResource("1_kip0u")

[node name="Root" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 81.0
offset_bottom = 120.0
theme = ExtResource("2_yatxs")

[node name="Panel" type="Panel" parent="Root"]
self_modulate = Color(1, 1, 1, 0.513726)
layout_mode = 0
offset_right = 137.0
offset_bottom = 120.0

[node name="ScrollContainer" type="Panel" parent="Root/Panel"]
clip_children = 2
layout_mode = 0
offset_left = 3.0
offset_top = 13.0
offset_right = 134.0
offset_bottom = 117.0

[node name="MainContainer" type="VBoxContainer" parent="Root/Panel/ScrollContainer"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 24.0
theme_override_constants/separation = 0

[node name="TopTextLabel" type="Label" parent="Root/Panel"]
layout_mode = 0
offset_top = 2.0
offset_right = 137.0
offset_bottom = 13.0
text = "game paused - options menu"
horizontal_alignment = 1

[node name="BaseOption" type="HBoxContainer" parent="Root"]
visible = false
layout_mode = 0
theme_override_constants/separation = 3

[node name="Name" type="Label" parent="Root/BaseOption"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "screen shake"
clip_text = true
text_overrun_behavior = 1

[node name="Amount" type="Label" parent="Root/BaseOption"]
layout_mode = 2
text = "0.1"
horizontal_alignment = 2

[node name="Keybinds" parent="Root" instance=ExtResource("3_n1vjm")]
visible = false
layout_mode = 1
offset_right = 79.0

[node name="TopTextSwitcher" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="TopTextSwitcher" to="." method="_on_top_text_switcher_timeout"]
